<resources>
    <string name="app_name">Gaadi2.0</string>
    <string name="title_activity_base_navigation">BaseNavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="air_conditioner">Air Conditioner</string>
    <string name="scng_kit">CNG Kit</string>
    <string name="audio_system">Audio System</string>
    <string name="anti_lock_breaking">Anti Lock Breaking Sysytem</string>
    <string name="power_window">Power Window</string>
    <string name="power_steering">Power Steering</string>
    <string name="overall_length">Overall Length</string>
    <string name="overall_width">Overall Width</string>
    <string name="overall_height">Overall Height</string>
    <string name="wheel_base">Wheel Base</string>
    <string name="ground_clearnce">Ground Clearence</string>
    <string name="power">Power</string>
    <string name="fue_tank_capacity">Fuel Tank Capacity</string>
    <string name="no_of_cylinders">No. of Cylinders</string>
    <string name="torque">Torque</string>
    <string name="seating_capacity">Seating Capacity</string>
    <string name="get_info">Get Seller Details</string>
    <string name="title_activity_base_collapsing">BaseCollapsingActivity</string>
    <string name="info">Links are created using a specific syntax, the so-called "link pattern". Originally, most wikis[citation needed] used CamelCase to name pages and create links. These are produced by capitalizing words in a phrase and removing the spaces between them (the word "CamelCase" is itself an example). While CamelCase makes linking very easy, it also leads to links which are written in a form that deviates from the standard spelling. To link to a page with a single-word title, one must abnormally capitalize one of the letters in the word (e.g. "WiKi" instead of "Wiki"). CamelCase-based wikis are instantly recognizable because they have many links with names such as "TableOfContents" and "BeginnerQuestions." It is possible for a wiki to render the visible anchor of such links "pretty" by reinserting spaces, and possibly also reverting to lower case. However, this reprocessing of the link to improve the readability of the anchor is limited by the loss of capitalization information caused by CamelCase reversal. For example, "RichardWagner" should be rendered as "Richard Wagner", whereas "PopularMusic" should be rendered as "popular music". There is no easy way to determine which capital letters should remain capitalized. As a result, many wikis now have "free linking" using brackets, and some disable CamelCase by default.</string>

    <string name="year">Year</string>
    <string name="fuel">Fuel</string>
    <string name="posted">Posted By</string>
    <string name="insurance">Insurance</string>
    <string name="kilometer">Kilometer</string>
    <string name="transmission">Transmission</string>
    <string name="owner">Owner</string>
    <string name="color">Color</string>
    <string name="registration_city">Registration City</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="get_seller_details">Get Seller Details</string>
    <string name="relevance">Relevance</string>
    <string name="recently_listed">Recently Listed</string>
    <string name="price_low_to_high">Price - Low to High</string>
    <string name="price_high_to_low">Price - High to Low</string>
    <string name="km_low_to_high">Low to High</string>
    <string name="year_new_first">Year - Newest First</string>
    <string name="sort">Sort</string>
    <string name="search_result">Search Result</string>
    <string name="model_name">Hundai Santro Xing SG</string>


    <string-array name="filter_left_item">
        <item>Price</item>
        <item>Make / Models</item>
        <item>Certified</item>
        <item>Advanced</item>
        <item>Date</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="st_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s stan... more</string>
    <string name="certified_by">Certified by</string>
    <string name="service_history">Service History</string>
    <string name="not_stolen">Not Stolen</string>
    <string name="non_accidental">Non Accidental</string>
    <string name="overall_rating">Overall rating</string>
    <string name="view_evaluation_report">View Evaluation Report</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="color_type">Color Type</string>


</resources>
