<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="All">
        <menu>
            <group
                android:id="@+id/checkable_group"
                android:checkableBehavior="all">
                <!-- Notice how these items inherit from the group. -->
                <item
                    android:id="@+id/checkable_item_1"
                    android:title="@string/item_1" />
                <item
                    android:id="@+id/checkable_item_2"
                    android:checked="true"
                    android:title="@string/item_2" />
                <item
                    android:id="@+id/checkable_item_3"
                    android:checked="true"
                    android:title="@string/item_3" />
            </group>
        </menu>
    </item>


</menu>