<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyle"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/parentLayoutWidthMatchStyling"
            android:baselineAligned="true"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_medium"
                android:text="Overview" />

            <include layout="@layout/border_view_match_width" />

        </LinearLayout>

        <LinearLayout
            style="@style/parentLayoutWidthMatchStylingPaddingStyling"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year" />

                <TextView
                    android:id="@+id/tv_year"
                    style="@style/TextStyleBlackNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/fuel" />

                <TextView
                    android:id="@+id/tv_fuel"
                    style="@style/TextStyleBlackNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/posted" />

                <TextView
                    android:id="@+id/tv_posted"
                    style="@style/TextStyleBlackNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/insurance" />

                <TextView
                    android:id="@+id/tv_insurance"
                    style="@style/TextStyleBlackNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/registration_city" />

                <TextView
                    android:id="@+id/tv_reg_city"
                    style="@style/TextStyleBlackNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kilometer" />

                <TextView
                    android:id="@+id/tv_kilometer"
                    style="@style/TextStyleBlackNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/transmission" />

                <TextView
                    android:id="@+id/tv_transmission"
                    style="@style/TextStyleBlackNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/owner" />

                <TextView
                    android:id="@+id/tv_owner"
                    style="@style/TextStyleBlackNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    style="@style/TextStyleNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/color" />

                <TextView
                    android:id="@+id/tv_color"
                    style="@style/TextStyleBlackNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>